--- a/P004565.opf/meta.yml
+++ b/P004565.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P004565
+id: P004565
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W23683
   title: དཔལ་ལྡན་འབྲུག་པ་དཀར་བརྒྱུད་པའི་གཞི་ལམ་འབྲས་གསུམ་གྱི་རྣམ་གཞག་མདོར་བསྡུས།
-  volume: ''
   author: ''
+  volumes: {}
