--- a/P004565.opf/meta.yml
+++ b/P004565.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W23683
   title: དཔལ་ལྡན་འབྲུག་པ་དཀར་བརྒྱུད་པའི་གཞི་ལམ་འབྲས་གསུམ་གྱི་རྣམ་གཞག་མདོར་བསྡུས།
   author: ''
-  volumes: {}
+  volumes:
+    f620732791324b05aaea8408b4227356:
+      image_group_id: I2431
+      title: ''
+      volume_number: 1
+      total_pages: 74
