added imgnum to the pagination

--- a/P004565.opf/layers/v001/pagination.yml
+++ b/P004565.opf/layers/v001/pagination.yml
@@ -3,520 +3,446 @@ annotation_type: pagination
 revision: '00001'
 annotations:
   67cc0bd400e94a4693fb397e561affa6:
-    page_index: 1a
-    page_info: null
-    reference: '24310001'
+    imgnum: 1
+    reference: 24310001.TIF
     span:
       start: 0
       end: 1052
   6dd395238f6e47bd8489c2bc49bcff56:
-    page_index: 1b
-    page_info: null
-    reference: '24310002'
+    imgnum: 2
+    reference: 24310002.TIF
     span:
       start: 1057
       end: 1802
   189b199d2a2a4ca98cbf036266b3703f:
-    page_index: 2a
-    page_info: null
-    reference: '24310003'
+    imgnum: 3
+    reference: 24310003.TIF
     span:
       start: 1807
       end: 1884
   71df655cef034cbf8e41453139d8896f:
-    page_index: 2b
-    page_info: null
-    reference: '24310004'
+    imgnum: 4
+    reference: 24310004.TIF
     span:
       start: 1889
       end: 2403
   5c5c1836ac1b4071b47342f69d460db6:
-    page_index: 3a
-    page_info: null
-    reference: '24310005'
+    imgnum: 5
+    reference: 24310005.TIF
     span:
       start: 2408
       end: 2760
   98c5c95573e044c795a97d0ef43a1f1f:
-    page_index: 3b
-    page_info: null
-    reference: '24310006'
+    imgnum: 6
+    reference: 24310006.TIF
     span:
       start: 2765
       end: 3001
   c8bad120bfe441acbe5c0fcc9f96a775:
-    page_index: 4a
-    page_info: null
-    reference: '24310007'
+    imgnum: 7
+    reference: 24310007.TIF
     span:
       start: 3006
       end: 3491
   ce8fca90d01348a9a4122220fa3a884c:
-    page_index: 4b
-    page_info: null
-    reference: '24310008'
+    imgnum: 8
+    reference: 24310008.TIF
     span:
       start: 3496
       end: 3765
   968cbfde53e84c91a86e7b4d77a2d882:
-    page_index: 5a
-    page_info: null
-    reference: '24310009'
+    imgnum: 9
+    reference: 24310009.TIF
     span:
       start: 3770
       end: 4686
   2b15c000dc4d4e8e889ef21eca1e2cb7:
-    page_index: 5b
-    page_info: null
-    reference: '24310010'
+    imgnum: 10
+    reference: 24310010.TIF
     span:
       start: 4691
       end: 5650
   200f2ccf6de649e79eba2b7100e55029:
-    page_index: 6a
-    page_info: null
-    reference: '24310011'
+    imgnum: 11
+    reference: 24310011.TIF
     span:
       start: 5655
       end: 6603
   c755a3445c6e4dd9a4bd255ff61eee42:
-    page_index: 6b
-    page_info: null
-    reference: '24310012'
+    imgnum: 12
+    reference: 24310012.TIF
     span:
       start: 6608
       end: 7538
   799e347878ff48ecbaa5a27968e42630:
-    page_index: 7a
-    page_info: null
-    reference: '24310013'
+    imgnum: 13
+    reference: 24310013.TIF
     span:
       start: 7543
       end: 8453
   cc44c2066cbe4576a61f832c91bc03ff:
-    page_index: 7b
-    page_info: null
-    reference: '24310014'
+    imgnum: 14
+    reference: 24310014.TIF
     span:
       start: 8458
       end: 9427
   1b081191471a4fcdbcbc79ab99ed4dc6:
-    page_index: 8a
-    page_info: null
-    reference: '24310015'
+    imgnum: 15
+    reference: 24310015.TIF
     span:
       start: 9432
       end: 10380
   810d90f2d961464492a2bafb3579e47c:
-    page_index: 8b
-    page_info: null
-    reference: '24310016'
+    imgnum: 16
+    reference: 24310016.TIF
     span:
       start: 10385
       end: 11351
   f591acff085a4380bd36fc465c91c2d1:
-    page_index: 9a
-    page_info: null
-    reference: '24310017'
+    imgnum: 17
+    reference: 24310017.TIF
     span:
       start: 11356
       end: 12299
   3725dffb3438484f887a1a18281afb93:
-    page_index: 9b
-    page_info: null
-    reference: '24310018'
+    imgnum: 18
+    reference: 24310018.TIF
     span:
       start: 12304
       end: 13256
   33798f6c2bf54d89b809ff6e2197c789:
-    page_index: 10a
-    page_info: null
-    reference: '24310019'
+    imgnum: 19
+    reference: 24310019.TIF
     span:
       start: 13261
       end: 13748
   983d9eb603104f79a17d2c236b00ffe3:
-    page_index: 10b
-    page_info: null
-    reference: '24310020'
+    imgnum: 20
+    reference: 24310020.TIF
     span:
       start: 13753
       end: 14718
   fb3adf182e2e4058b529374a22ab51b0:
-    page_index: 11a
-    page_info: null
-    reference: '24310021'
+    imgnum: 21
+    reference: 24310021.TIF
     span:
       start: 14723
       end: 15683
   441ca530f901498e917708da7672c5bc:
-    page_index: 11b
-    page_info: null
-    reference: '24310022'
+    imgnum: 22
+    reference: 24310022.TIF
     span:
       start: 15688
       end: 16642
   505c6cc22a984e26b06e6725be6031f6:
-    page_index: 12a
-    page_info: null
-    reference: '24310023'
+    imgnum: 23
+    reference: 24310023.TIF
     span:
       start: 16647
       end: 17595
   9df0ba8463684545a3a49549645259c6:
-    page_index: 12b
-    page_info: null
-    reference: '24310024'
+    imgnum: 24
+    reference: 24310024.TIF
     span:
       start: 17600
       end: 18537
   e81bc6e994764643a48279efb6909f4e:
-    page_index: 13a
-    page_info: null
-    reference: '24310025'
+    imgnum: 25
+    reference: 24310025.TIF
     span:
       start: 18542
       end: 19494
   9e282195a9ec4a95a8799c838928ec9a:
-    page_index: 13b
-    page_info: null
-    reference: '24310026'
+    imgnum: 26
+    reference: 24310026.TIF
     span:
       start: 19499
       end: 20442
   500330a4c16947b48f5b41b2924f92d9:
-    page_index: 14a
-    page_info: null
-    reference: '24310027'
+    imgnum: 27
+    reference: 24310027.TIF
     span:
       start: 20447
       end: 21371
   8386fd304c82424cbde384398c836862:
-    page_index: 14b
-    page_info: null
-    reference: '24310028'
+    imgnum: 28
+    reference: 24310028.TIF
     span:
       start: 21376
       end: 22302
   abc6cb6503c84f668f0d2cb360067057:
-    page_index: 15a
-    page_info: null
-    reference: '24310029'
+    imgnum: 29
+    reference: 24310029.TIF
     span:
       start: 22307
       end: 23258
   02e1049ecf07415aab19c5c8a33dbc61:
-    page_index: 15b
-    page_info: null
-    reference: '24310030'
+    imgnum: 30
+    reference: 24310030.TIF
     span:
       start: 23263
       end: 24198
   816cdef9e8c14c9ea3a836073b11f5cc:
-    page_index: 16a
-    page_info: null
-    reference: '24310031'
+    imgnum: 31
+    reference: 24310031.TIF
     span:
       start: 24203
       end: 25126
   554d335f984b49b28c4c60becbebb5f7:
-    page_index: 16b
-    page_info: null
-    reference: '24310032'
+    imgnum: 32
+    reference: 24310032.TIF
     span:
       start: 25131
       end: 25998
   20528764d2b94f4dae02d5f6e9b09b69:
-    page_index: 17a
-    page_info: null
-    reference: '24310033'
+    imgnum: 33
+    reference: 24310033.TIF
     span:
       start: 26003
       end: 26926
   938d80d2b4df43f9beea384f124bb915:
-    page_index: 17b
-    page_info: null
-    reference: '24310034'
+    imgnum: 34
+    reference: 24310034.TIF
     span:
       start: 26931
       end: 27923
   d8e991b9d18e4248be3d3b907d990378:
-    page_index: 18a
-    page_info: null
-    reference: '24310035'
+    imgnum: 35
+    reference: 24310035.TIF
     span:
       start: 27928
       end: 28805
   1966697f975f42a39c34e3a4e8459b22:
-    page_index: 18b
-    page_info: null
-    reference: '24310036'
+    imgnum: 36
+    reference: 24310036.TIF
     span:
       start: 28810
       end: 29801
   71b04d09b6bc4d788156932e9ef2a07f:
-    page_index: 19a
-    page_info: null
-    reference: '24310037'
+    imgnum: 37
+    reference: 24310037.TIF
     span:
       start: 29806
       end: 30755
   a095087417e44fec81c2978ce0adfd58:
-    page_index: 19b
-    page_info: null
-    reference: '24310038'
+    imgnum: 38
+    reference: 24310038.TIF
     span:
       start: 30760
       end: 31685
   38534064461a46c780f3faf0553e9497:
-    page_index: 20a
-    page_info: null
-    reference: '24310039'
+    imgnum: 39
+    reference: 24310039.TIF
     span:
       start: 31690
       end: 32620
   c7731fa0584c47d2b83cbdbcf9e26e00:
-    page_index: 20b
-    page_info: null
-    reference: '24310040'
+    imgnum: 40
+    reference: 24310040.TIF
     span:
       start: 32625
       end: 33553
   ea473955a049452fb87cab4d1614eca6:
-    page_index: 21a
-    page_info: null
-    reference: '24310041'
+    imgnum: 41
+    reference: 24310041.TIF
     span:
       start: 33558
       end: 34464
   da44d885a63b4d81af4bb96d0b008db4:
-    page_index: 21b
-    page_info: null
-    reference: '24310042'
+    imgnum: 42
+    reference: 24310042.TIF
     span:
       start: 34469
       end: 35398
   3a95c42847b74c2786333b8185ab18b6:
-    page_index: 22a
-    page_info: null
-    reference: '24310043'
+    imgnum: 43
+    reference: 24310043.TIF
     span:
       start: 35403
       end: 36355
   d802611af8f545e4a24fcac3b6ad91da:
-    page_index: 22b
-    page_info: null
-    reference: '24310044'
+    imgnum: 44
+    reference: 24310044.TIF
     span:
       start: 36360
       end: 37288
   fa1547ca206a4f1dbe8dee1c7c5ad22d:
-    page_index: 23a
-    page_info: null
-    reference: '24310045'
+    imgnum: 45
+    reference: 24310045.TIF
     span:
       start: 37293
       end: 38233
   9c7c2778f2374bec824faf3c5ea4c985:
-    page_index: 23b
-    page_info: null
-    reference: '24310046'
+    imgnum: 46
+    reference: 24310046.TIF
     span:
       start: 38238
       end: 39135
   1457951c9a224bba9cab868bc0174da9:
-    page_index: 24a
-    page_info: null
-    reference: '24310047'
+    imgnum: 47
+    reference: 24310047.TIF
     span:
       start: 39140
       end: 40040
   ed8de85456b84fe384b1d979b797a415:
-    page_index: 24b
-    page_info: null
-    reference: '24310048'
+    imgnum: 48
+    reference: 24310048.TIF
     span:
       start: 40045
       end: 40969
   b5b1333d1d724f068350f7e7c03cf668:
-    page_index: 25a
-    page_info: null
-    reference: '24310049'
+    imgnum: 49
+    reference: 24310049.TIF
     span:
       start: 40974
       end: 41904
   c39cff1931e248bbbf909a24722920f5:
-    page_index: 25b
-    page_info: null
-    reference: '24310050'
+    imgnum: 50
+    reference: 24310050.TIF
     span:
       start: 41909
       end: 42841
   836578e02b514cffb7de39205eed41c6:
-    page_index: 26a
-    page_info: null
-    reference: '24310051'
+    imgnum: 51
+    reference: 24310051.TIF
     span:
       start: 42846
       end: 43783
   dea67178a2624a388459900b5b7f724d:
-    page_index: 26b
-    page_info: null
-    reference: '24310052'
+    imgnum: 52
+    reference: 24310052.TIF
     span:
       start: 43788
       end: 44704
   77063a801e9d42b6aad3c55f59e179d4:
-    page_index: 27a
-    page_info: null
-    reference: '24310053'
+    imgnum: 53
+    reference: 24310053.TIF
     span:
       start: 44709
       end: 45673
   b4d60541377c428db5db7d020bad189b:
-    page_index: 27b
-    page_info: null
-    reference: '24310054'
+    imgnum: 54
+    reference: 24310054.TIF
     span:
       start: 45678
       end: 46616
   fb701e4ab8a64a0da797924ac179c225:
-    page_index: 28a
-    page_info: null
-    reference: '24310055'
+    imgnum: 55
+    reference: 24310055.TIF
     span:
       start: 46621
       end: 47555
   ba70ce2e42984525913843be46cd9bbb:
-    page_index: 28b
-    page_info: null
-    reference: '24310056'
+    imgnum: 56
+    reference: 24310056.TIF
     span:
       start: 47560
       end: 48523
   fde20cd6d9af46b68f1e8bd149d5ccf2:
-    page_index: 29a
-    page_info: null
-    reference: '24310057'
+    imgnum: 57
+    reference: 24310057.TIF
     span:
       start: 48528
       end: 49498
   58009e78feed4425b5c3136d091b5eaa:
-    page_index: 29b
-    page_info: null
-    reference: '24310058'
+    imgnum: 58
+    reference: 24310058.TIF
     span:
       start: 49503
       end: 50406
   1bb94fb07fe9402abbbd13206891c0b7:
-    page_index: 30a
-    page_info: null
-    reference: '24310059'
+    imgnum: 59
+    reference: 24310059.TIF
     span:
       start: 50411
       end: 51333
   149cb0fd20fc47718e96b8dd1ec4e61b:
-    page_index: 30b
-    page_info: null
-    reference: '24310060'
+    imgnum: 60
+    reference: 24310060.TIF
     span:
       start: 51338
       end: 52273
   706db556456e4584815532d60dd6b6b4:
-    page_index: 31a
-    page_info: null
-    reference: '24310061'
+    imgnum: 61
+    reference: 24310061.TIF
     span:
       start: 52278
       end: 53213
   0a5f24b231344846b5a0cece1c37ed51:
-    page_index: 31b
-    page_info: null
-    reference: '24310062'
+    imgnum: 62
+    reference: 24310062.TIF
     span:
       start: 53218
       end: 54175
   a1ede526f61f46da8fe962446330149e:
-    page_index: 32a
-    page_info: null
-    reference: '24310063'
+    imgnum: 63
+    reference: 24310063.TIF
     span:
       start: 54180
       end: 55099
   3e3e63ed9a1945ee8c91d7a297d73831:
-    page_index: 32b
-    page_info: null
-    reference: '24310064'
+    imgnum: 64
+    reference: 24310064.TIF
     span:
       start: 55104
       end: 56093
   088a307533e7496387a31e0b7352495d:
-    page_index: 33a
-    page_info: null
-    reference: '24310065'
+    imgnum: 65
+    reference: 24310065.TIF
     span:
       start: 56098
       end: 57057
   e334cae802644c53ac22cfdb9a8b1726:
-    page_index: 33b
-    page_info: null
-    reference: '24310066'
+    imgnum: 66
+    reference: 24310066.TIF
     span:
       start: 57062
       end: 58005
   059c683e5ea646ed9e84aa5dcc688c4f:
-    page_index: 34a
-    page_info: null
-    reference: '24310067'
+    imgnum: 67
+    reference: 24310067.TIF
     span:
       start: 58010
       end: 58952
   8a6c458b40ee48a4bc424a9e5d6ddafa:
-    page_index: 34b
-    page_info: null
-    reference: '24310068'
+    imgnum: 68
+    reference: 24310068.TIF
     span:
       start: 58957
       end: 59904
   d46e6eafd8a148198e671f3c88ba402c:
-    page_index: 35a
-    page_info: null
-    reference: '24310069'
+    imgnum: 69
+    reference: 24310069.TIF
     span:
       start: 59909
       end: 60819
   eccf1dd4d1dc4394b4a9f72ac6ab8a0f:
-    page_index: 35b
-    page_info: null
-    reference: '24310070'
+    imgnum: 70
+    reference: 24310070.TIF
     span:
       start: 60824
       end: 61777
   7c4bf77b097f47e6a2cb0162f2314003:
-    page_index: 36a
-    page_info: null
-    reference: '24310071'
+    imgnum: 71
+    reference: 24310071.TIF
     span:
       start: 61782
       end: 62738
   32676ac3d80b4a6b94a1d09bbb7beca4:
-    page_index: 36b
-    page_info: null
-    reference: '24310072'
+    imgnum: 72
+    reference: 24310072.TIF
     span:
       start: 62743
       end: 63717
   1f9faa4374eb4f458ba2b3930746611a:
-    page_index: 37a
-    page_info: null
-    reference: '24310073'
+    imgnum: 73
+    reference: 24310073.TIF
     span:
       start: 63722
       end: 64660
   721d4faf6b22436ab7db8066f107856d:
-    page_index: 37b
-    page_info: null
-    reference: '24310074'
+    imgnum: 74
+    reference: 24310074.TIF
     span:
       start: 64665
       end: 64666
