--- a/P004565.opf/layers/v001/Pagination.yml
+++ b/P004565.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: b3797fc054ac4d7b81706b284e3a7bf1
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   67cc0bd400e94a4693fb397e561affa6:
