--- a/P004565.opf/meta.yml
+++ b/P004565.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P004565
 initial_creation_type: ocr
+created_at: 29/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W23683
   title: དཔལ་ལྡན་འབྲུག་པ་དཀར་བརྒྱུད་པའི་གཞི་ལམ་འབྲས་གསུམ་གྱི་རྣམ་གཞག་མདོར་བསྡུས།
