--- a/P004565.opf/meta.yml
+++ b/P004565.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P004565
 initial_creation_type: ocr
 created_at: 29/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 11:41:58.505659
 source_metadata:
   id: bdr:W23683
   title: དཔལ་ལྡན་འབྲུག་པ་དཀར་བརྒྱུད་པའི་གཞི་ལམ་འབྲས་གསུམ་གྱི་རྣམ་གཞག་མདོར་བསྡུས།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 74
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
